Fix snapshot restoration of stack'd doubles (bug 679581, r=sstangl).